--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\EditMember.cs" />
     <Compile Include="Models\NewMember.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -229,6 +230,7 @@
     <Content Include="Views\Home\Requirements.cshtml" />
     <Content Include="Views\Categories\List.cshtml" />
     <Content Include="Views\Home\Setup.cshtml" />
+    <Content Include="Views\Members\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
